[package]
name = "branded-graph"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
description = "Demonstration of a branded graph structure with safe and fast self-references"
repository = "https://github.com/thaliaarchi/branded-graph"
license = "MPL-2.0"
keywords = ["graph", "branded"]
categories = ["data-structures"]

[dependencies]
static_assertions = "1.1"
